<resources>
    <string name="app_name">SayaGym App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_user">Nombre de usuario</string>
    <string name="message_name">Introduce tu nombre</string>
    <string name="message_user_email">Introduce tu correo electronico</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="message_password_user">Introduce tu contraseña</string>
    <string name="signUputtonText">Registrate</string>
    <string name="loginButtonText">Acceder</string>
    <string name="provider">Proveedor</string>
    <string name="logOutUser">Cerrar sesion</string>
    <string name="last_name">apellido(s)</string>
    <string name="user_age">Edad</string>
    <string name="user_weight">Peso Inicial</string>
    <string name="user_weight_final">Peso final</string>
    <string name="home">Volver al menu principal</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="getInfo">Ver imformación</string>
    <string name="sizes">TUS MEDIDAS</string>
    <string name="arm">Brazo</string>
    <string name="leg">piernas</string>
    <string name="shoulders">Hombros</string>
    <string name="chest">Pecho</string>
    <string name="user_final_sizes">TUS MEDIDAS
        META</string>
    <string name="user_imformation">Informacion Personal</string>
    <string name="coaching">Coaching</string>
    <string name="nutrition">Nutrición</string>
    <string name="selectCoach">Entrenadores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>